syntax = "proto3";

option go_package = "internal/app/protobuf";

service Agent {
    rpc CollectTiDB (stream CPUTimeRequestTiDB) returns (stream Empty) {}
}

message Empty {}

message CPUTimeRequestTiDB {
    repeated uint64 timestamp = 1;  // timestamp in second
    repeated uint32 cpu_time = 2;  // range [0, 10000], mapping to [0, 1.0000]
    string sql_normalized = 3;  // SQL string with sensitive fields trimmed
}
